--- a/Index.html
+++ b/Index.html
@@ -143,15 +143,147 @@
             margin-top: 10px;
             vertical-align: middle;
             opacity: 60%;
+            cursor: pointer;
         }
         #search-box .box .search-area{
             border: none;
-            width: 300px;
+            width: 400px;
             margin-left: 10px;
             margin-top: 10px;
             vertical-align: middle;
             font-size: 15px;
             border: 0px solid;
+        }
+        #search-box .box .search-area:focus{
+            outline: none;
+        }
+        #search-box .box .voice-icon{
+            width: 23px;
+            margin-top: 9px;
+            vertical-align: middle;
+            margin-left: 10px;
+            cursor: pointer;
+        }
+        #search-box .box .lens-icon{
+            width: 27px;
+            margin-top: 5px;
+            vertical-align: middle;
+            margin-left: 10px;
+            cursor: pointer;
+        }
+        #recent{
+            margin-top: 30px;
+            display: inline-block;
+        }
+        #recent .box1{
+            width: 120px;
+            height: 130px;
+            background-color: rgb(255, 255, 255);
+            margin-left: 500px;
+            padding-top: 3px;
+            border-radius: 5px;
+            text-decoration: none;
+            display: inline-block;
+            
+        }
+        #recent .box1:hover{
+            background-color: rgba(0, 0, 0, 0.269);
+            text-decoration: none;
+            cursor: pointer;
+        }
+        #recent a{
+            color: black;
+            text-decoration: none;
+        }
+        #recent .box1 .circle{
+            width: 50px;
+            height: 50px;
+            border: none;
+            border-radius: 50px;
+            background-color: rgba(0, 0, 0, 0.164);
+            margin-left: 35px;
+            margin-top: 35px;
+
+        }
+        #recent .box1 .circle img{
+            width: 35px;
+            margin-left: 7px;
+            margin-top: 7px;
+        }
+        #recent .box1 .circle p{
+            font-family: Arial, Helvetica, sans-serif;
+            text-decoration: none;
+        }
+        #recent .box2{
+            width: 120px;
+            height: 130px;
+            background-color: rgb(255, 255, 255);
+            margin-left: 10px;
+            padding-top: 3px;
+            border-radius: 5px;
+            text-decoration: none;
+            display: inline-block;
+            
+        }
+        #recent .box2:hover{
+            background-color: rgba(0, 0, 0, 0.269);
+            text-decoration: none;
+            cursor: pointer;
+        }
+        #recent a{
+            color: black;
+            text-decoration: none;
+        }
+        #recent .box2 .circle{
+            width: 50px;
+            height: 50px;
+            border: none;
+            border-radius: 50px;
+            background-color: rgba(0, 0, 0, 0.164);
+            margin-left: 35px;
+            margin-top: 35px;
+
+        }
+        #recent .box2 .circle img{
+            width: 30px;
+            margin-left: 10px;
+            margin-top: 10px;
+        }
+        #recent .box2 .circle p{
+            font-family: Arial, Helvetica, sans-serif;
+            text-decoration: none;
+        }
+        #custom{
+            width: 170px;
+            height: 35px;
+            background-color: rgba(37, 127, 229, 0.315);
+            border: none;
+            border-radius: 50px;
+            margin-left: 86%;
+            margin-top: 240px;
+            box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.342);
+            display: inline-block;
+            vertical-align: middle;
+            cursor: pointer;
+        }
+        #custom:hover{
+            background-color: rgba(37, 127, 229, 0.406);
+        }
+        #custom img{
+            width: 13px;
+            margin-left: 15px;
+            margin-top: 0px;
+            opacity: 80%;
+            display: inline-block;
+            vertical-align: middle;
+        }
+        #custom p{
+            font-size: 13px;
+            display: inline-block;
+            margin-left: 10px;
+            vertical-align: middle;
+            margin-top: 12px;
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
 </head>
@@ -177,13 +309,40 @@
         </div>
     </div>
 
-    <img class = "google-logo" src="C:\Users\Yash\Desktop\Website\Google\Icons\pngwing.com.png">
+    <a href="file:///C:/Users/Yash/Desktop/Website/Google/Index.html"><img class = "google-logo" src="C:\Users\Yash\Desktop\Website\Google\Icons\pngwing.com.png"></a>
 
     <div id ="search-box">
         <div class="box">
             <img class = "search-logo" src="C:\Users\Yash\Desktop\Website\Google\Icons\magnifying-glass.png">
-            <input class = "search-area"type="text" placeholder="Search Google or type a URL">
+            <input class = "search-area" type="text" placeholder="Search Google or type a URL">
+            <img class = "voice-icon" src="C:\Users\Yash\Desktop\Website\Google\Icons\google-voice.png">
+            <img class = "lens-icon" src="C:\Users\Yash\Desktop\Website\Google\Icons\google.png">
         </div>
+    </div>
+
+    <div id = "recent">
+        <a href="https://github.com/"><div class = "box1">
+            <div class = "circle">
+                <img src="C:\Users\Yash\Desktop\Website\Google\Icons\github-logo.png">
+                <p>
+                    GitHub
+                </p>
+            </div></a>
+        </div>
+        <a href="https://www.netflix.com/"><div class = "box2">
+            <div class = "circle">
+                <img src="C:\Users\Yash\Desktop\Website\Google\Icons\netflix.png">
+                <p>
+                    Netflix
+                </p>
+            </div></a>
+        </div>
+    </div>
+    <div id = "custom">
+        <img src="C:\Users\Yash\Desktop\Website\Google\Icons\pencil.png">
+        <p>
+            Customize Chrome
+        </p>
     </div>
 </body>
 </html>
